<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="26px"
    android:gravity="center_vertical">
<CheckBox
    android:id="@+id/activity_cart_listitem_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/checkbox"
    android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/activity_cart_listitem_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="农夫山泉"
        android:textSize="18px"
        android:lines="1"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/activity_cart_listitem_guige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_standard"
        android:textSize="18px"
        android:lines="1"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/activity_cart_listitem_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_unitPrice"
        android:textSize="18px"
        android:lines="1"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/activity_cart_listitem_qiding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_minOrder"
        android:textSize="18px"
        android:lines="1"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/activity_cart_listitem_kucun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/giftCard_stock"
        android:textSize="18px"
        android:lines="1"
        android:layout_marginLeft="10dp"/>
    <ImageView
        android:id="@+id/activity_cart_listitem_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/delet"
        android:clickable="true"
        android:layout_marginLeft="10dp"/>
</LinearLayout>